--- a/ALNetworking/ALNetworkingDetail.html
+++ b/ALNetworking/ALNetworkingDetail.html
@@ -19,6 +19,12 @@
                 <td>{url}</td>
             </tr>
             <tr>
+                <td>请求头</td>
+            </tr>
+            <tr>
+                <td>{header}</td>
+            </tr>
+            <tr>
                 <td>参数</td>
             </tr>
             <tr>
