--- a/ALNetworking/ALNetworkingDetail.html
+++ b/ALNetworking/ALNetworkingDetail.html
@@ -74,5 +74,8 @@
             color:#000000;
             height: 40px;
         }
+        tr:nth-child(even) td {
+            color : darkgray;
+        }
     </style>
 </html>
