Fix bugs and add English notes

--- a/ALNetworking/ALNetworkingDetail.html
+++ b/ALNetworking/ALNetworkingDetail.html
@@ -7,7 +7,7 @@
     <body>
         <table>
             <tr>
-                <td>时间</td>
+                <td>Date</td>
             </tr>
             <tr>
                 <td>{time}</td>
@@ -19,43 +19,43 @@
                 <td>{url}</td>
             </tr>
             <tr>
-                <td>请求头</td>
+                <td>Request Headers</td>
             </tr>
             <tr>
                 <td>{header}</td>
             </tr>
             <tr>
-                <td>参数</td>
+                <td>Request Parameters</td>
             </tr>
             <tr>
                 <td>{params}</td>
             </tr>
             <tr>
-                <td>参数类型</td>
+                <td>Paramters Type</td>
             </tr>
             <tr>
                 <td>{paramsType}</td>
             </tr>
             <tr>
-                <td>缓存策略</td>
+                <td>Cache Strategy</td>
             </tr>
             <tr>
                 <td>{stategy}</td>
             </tr>
             <tr>
-                <td>请求方式</td>
+                <td>Request Metohd</td>
             </tr>
             <tr>
                 <td>{method}</td>
             </tr>
             <tr>
-                <td>是否取本地缓存</td>
+                <td>Is comes from cache</td>
             </tr>
             <tr>
                 <td>{isCache}</td>
             </tr>
             <tr>
-                <td>响应体</td>
+                <td>Response Body</td>
             </tr>
             <tr>
                 <td>{response}</td>
